Fri Oct 25 2013 Aleksey
	* Fixed 'value too large' error on 32-bit Linux

Thu Sep 19 2013 Aleksey
	* Bugfix: corrected sha3-224 for big-endian processors

Tue Sep 17 2013 Aleksey
	* === Version 1.3.0 ===

Tue May 21 2013 Aleksey
	* Fixed output of percents when two or more files are hashed

Mon Apr 29 2013 Aleksey
	* Supported SHA3 (Keccak) hash function

Sat Apr 27 2013 Aleksey
	* Fixed memory leaks

Tue Apr 23 2013 Aleksey
	* Bugfix: %{mtime} formating option was broken

Mon Dec 31 2012 Aleksey
	* imported translations from Launchpad: de, es, gl, it

Tue Dec 25 2012 Aleksey
	* === Version 1.2.10 ===

Mon Nov  5 2012 Aleksey
	* Bugfix: incorrect GOST hash for ("\FF" x 64) on non-x86 CPU

Mon Oct  8 2012 Aleksey
	* Shortcut -k for --check-embedded

Thu Sep 27 2012 Aleksey
	* Bugfix: non-zero exit code if some files were not found
	* improved Ctrl-C processing

Sat Aug  4 2012 Aleksey
	* Bugfix: path issue with verification of hash files

Mon Jun 25 2012 Aleksey
	* Bugfix: different BTIH were generated for the same file

Sun May 13 2012 Aleksey
	* BugFix: python crashed on ia64

Tue Apr 17 2012 Aleksey
	* PHP bindings for librhash

Sat Apr 14 2012 Aleksey
	* === Version 1.2.9 ===

Fri Apr 13 2012 Aleksey, Sergey Basalaev
	* translations: de, en_AU, es, gl, it

Sun Apr 08 2012 Aleksey
	* Bugfix: handling UNC filenames on Windows
	* option --bt-batch for batch torrents

Sat Jan  7 2012 Aleksey
	* librhash: rhash_print_magnet function

Sun Nov 06 2011 Sergey Basalaev
	* .NET/Mono bindings to librhash

Wed Sep 14 2011 Aleksey
	* === Version 1.2.8 ===

Wed Sep 14 2011 Aleksey, SBasalaev
	* LibRHash bindings to Java, Perl, Python, Ruby

Tue Sep  6 2011 Aleksey
	* librhash: implemented auto-final feature, turned on by default

Tue Sep  6 2011 Aleksey, SBasalaev
	* Russian translation

Sat Sep  3 2011 Aleksey
	* Bugfix: not enough trailing '=' in a base64-encoded hash

Sat Aug 20 2011 Aleksey
	* Bugfix: fix broken --openssl option parsing