@@ -1,3 +1,6 @@
+Sat Dec 28 2013 Aleksey
+	* Bugfix: suppress the R6034 error popup on Windows
+
 Fri Oct 25 2013 Aleksey
 	* Fixed 'value too large' error on 32-bit Linux
 
